# regreader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_CN.md  constraints-conda.txt  pyproject.toml
agentex/: README.md  pyproject.toml
agentex/examples/advanced/: custom_router.py  multi_subagent.py  parallel_execution.py
agentex/examples/basic/: simple_chat.py  with_memory.py  with_tools.py
agentex/examples/integrations/: claude_sdk.py  langgraph_example.py  pydantic_ai_example.py
agentex/examples/regreader/: basic_usage.py  multi_subagent.py  regreader_agent.py
agentex/src/agentex/: __init__.py  agent.py  exceptions.py  types.py
agentex/src/agentex/config/: __init__.py
agentex/src/agentex/frameworks/: __init__.py  base.py
agentex/src/agentex/frameworks/claude/: __init__.py
agentex/src/agentex/frameworks/langgraph/: __init__.py
agentex/src/agentex/frameworks/pydantic/: __init__.py
agentex/src/agentex/orchestration/: __init__.py  parallel.py
agentex/src/agentex/shared/: __init__.py  callbacks.py  events.py  memory.py
agentex/src/agentex/tools/: __init__.py  base.py  registry.py
coordinator/: CLAUDE.md
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  LONG_QUERY_INPUT_GUIDE.md  LONG_QUERY_INPUT_INDEX.md  MAKEFILE_API_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md  bash-fs-paradiam.md
docs/PreliminaryDesign/: GridCode项目开发指南粗略稿.md  与Gemini的讨论记录.md  多规程规定检索初步设计.md  安规检索初步设计.md
docs/archive/PreliminaryDesign/: GridCode项目开发指南粗略稿.md  多规程规定检索初步设计.md  安规检索初步设计.md
docs/archive/analysis/: MCP_TOOLS_ANALYSIS.md  PAGE_STORAGE_ANALYSIS.md
docs/archive/design/: CLI_MCP_MODE_DESIGN.md  MEMORY_SYSTEM_DESIGN.md
docs/archive/design-decisions/: GET_TOC_VS_GET_CHAPTER_STRUCTURE.md
docs/archive/optimization/: CHAPTER_STRUCTURE_OPTIMIZATION.md
docs/archive/planning/: CROSS_REGULATION_QUESTIONS.md  INSPECT_COMMAND_PLAN.md
docs/bash-fs-paradiam/: API_REFERENCE.md  ARCHITECTURE_DESIGN.md  GridCode-RegReader-ARCHITECTURE_EXPLANATION.md  MAKEFILE_REFACTORING.md  USER_GUIDE.md  WORK_LOG.md
docs/dev/: API_REFERENCE.md  CHAPTER_STRUCTURE_OPTIMIZATION.md  CLAUDE_PRESET_GUIDE.md  CLI_INTERFACE_ENHANCEMENT.md  CLI_MCP_MODE_DESIGN.md  CONCURRENT_EXECUTION_TEST_REPORT.md  CROSS_REGULATION_QUESTIONS.md  DESIGN_DOCUMENT.md  DOCUMENTATION_IMPROVEMENT_REPORT.md  EMBEDDING_ARCHITECTURE.md  GET_TOC_VS_GET_CHAPTER_STRUCTURE.md  INSPECT_COMMAND_PLAN.md  INSPECT_IMPLEMENTATION_SUMMARY.md  LLM_TIMING_OTEL_INTEGRATION.md  MAIN_AGENT_DEMO.md  MAIN_AGENT_USER_GUIDE.md  MCP_SESSION_REUSE_FIX.md  MCP_TOOLS_ANALYSIS.md  MCP_TOOLS_CLASSIFICATION_PLAN.md  MCP_TOOLS_DESIGN.md  MCP_TOOLS_VERIFICATION.md  MEMORY_SYSTEM_DESIGN.md  MULTI_REGULATION_SEARCH_DESIGN.md  PAGE_STORAGE_ANALYSIS.md  REFACTORING_PROGRESS.md  VALIDATION_REPORT.md  WORK_LOG.md
docs/main/: DESIGN_DOCUMENT.md  WORK_LOG.md
docs/subagents/: SUBAGENTS_ARCHITECTURE.md  WORK_LOG.md
litellm/: claude_client_env.sh  config-multi-routers.yaml  config.yaml  openai_ollama.sh  openai_openrouter.sh  openai_siliconflow.sh  set_litellm_proxy_env.sh  start-litellm-proxy.sh  test-ollama-streaming.sh  test-ollama-toolcall-streaming.sh  test-ollama.sh
makefiles/: agents.mk  conda.mk  mcp-tools.mk  variables.mk
scripts/: docling_extract_figures.py  docling_extract_tables.py  reindex_document.py  stats_headings.py  test_docling_extract_tables.py  verify_bash_fs.py  verify_chapters.py
scripts/makefile/: list_cross_page_tables.py  table_registry_build.py  table_registry_stats.py
shared/: data
skills/: registry.yaml
skills/wengui-dc-limit/: SKILL.md
src/grid_code/: __init__.py  cli.py  config.py  exceptions.py
src/grid_code/agents/: __init__.py  base.py  callbacks.py  claude_agent.py  display.py  events.py  hooks.py  langgraph_agent.py  llm_timing.py  mcp_config.py  mcp_connection.py  memory.py  otel_hooks.py  prompts.py  pydantic_agent.py  result_parser.py  session.py
src/grid_code/embedding/: __init__.py  flag.py  sentence_transformer.py
src/grid_code/index/: __init__.py  base.py  fts_index.py  hybrid_search.py  table_fts5.py  table_indexer.py  table_lancedb.py  table_search.py  vector_index.py
src/grid_code/infrastructure/: __init__.py  event_bus.py  file_context.py  security_guard.py  skill_loader.py
src/grid_code/mcp/: __init__.py  adapter.py  client.py  factory.py  prompt_generator.py  protocol.py  server.py  tool_metadata.py  tools.py
src/grid_code/orchestrator/: __init__.py  aggregator.py  analyzer.py  coordinator.py  router.py
src/grid_code/parser/: __init__.py  docling_parser.py  page_extractor.py  table_registry_builder.py
src/grid_code/services/: inspect.py  inspect_display.py  metadata_service.py
src/grid_code/storage/: __init__.py  models.py  page_store.py
src/grid_code/subagents/: __init__.py  base.py  config.py  prompts.py  registry.py  result.py
src/regreader/: __init__.py  cli.py
src/regreader/agents/: __init__.py  base.py  callbacks.py  claude_agent.py  display.py  events.py  hooks.py  langgraph_agent.py  llm_timing.py  mcp_connection.py  prompts.py  pydantic_agent.py
src/regreader/core/: __init__.py  config.py  exceptions.py
src/regreader/embedding/: __init__.py  base.py  flag.py  sentence_transformer.py
src/regreader/index/: __init__.py  base.py  fts_index.py  hybrid_search.py  table_fts5.py  table_indexer.py  table_lancedb.py  table_search.py  vector_index.py
subagents/regsearch/: SKILL.md
tests/: __init__.py  test_heading_detection.py
tests/agents/: test_enhanced_display.py
tests/bash-fs-paradiam/: __init__.py  test_claude_preset.py  test_event_bus.py  test_file_context.py  test_regsearch_subagent.py  test_security_guard.py  test_skill_loader.py
tests/dev/: test_agent_mcp_logging.py  test_claude_agent.py  test_claude_events.py  test_decision_hint.py  test_get_toc_depth.py  test_langgraph_agent.py  test_mcp_connection.py  test_mcp_logging.py  test_mcp_response_format.py  test_mcp_tools.py  test_pydantic_agent.py  test_result_parser.py  test_rich_live_stderr.py  test_tool_call_logging.py
tests/main/: __init__.py
(+106 files in other folders)
