[project]
name = "regreader"
version = "0.1.0"
description = "RegReader - 电力系统安规智能检索 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 文档解析
    "docling>=2.22.0",
    # 数据模型和验证
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # 向量数据库
    "lancedb>=0.20.0",
    # MCP Server
    "mcp>=1.6.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",
    # 日志
    "loguru>=0.7.0",
    # Agent 框架
    "anthropic>=0.52.0", # Anthropic API (for other agents)
    "claude-agent-sdk>=0.1.0", # Claude Agent SDK (https://platform.claude.com/docs/en/agent-sdk)
    "pydantic-ai>=1.0.0", # Pydantic AI v1.0+ with MCP toolsets
    "langgraph>=0.2.0", # LangGraph
    "langchain-anthropic>=0.3.0", # LangChain Anthropic
    "langchain-openai>=0.2.0", # LangChain OpenAI
    # 向量嵌入 (依赖系统已安装的 torch)
]

[project.optional-dependencies]
# 向量嵌入 (需要系统已安装 torch)
embedding = [
    "sentence-transformers>=3.3.0",
]

# OCR 支持 (可选，需要 onnxruntime)
ocr = [
    "rapidocr-onnxruntime>=1.4.4",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# 可选的索引后端
tantivy = [
    "tantivy>=0.22.0",
]
whoosh = [
    "whoosh>=2.7.4",
    "jieba>=0.42.0",  # 中文分词
]
qdrant = [
    "qdrant-client>=1.12.0",
]

# 可选的嵌入后端
flag = [
    "FlagEmbedding>=1.2.0",
]

# OpenTelemetry 追踪后端 (requires >=1.28.0 for pydantic-ai compatibility)
otel = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]
otel-otlp = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]
# NOTE: otel-jaeger removed - opentelemetry-exporter-jaeger is deprecated (capped at 1.21.0)
# incompatible with otel-api>=1.28.0

# NOTE: otel-zipkin removed - incompatible with otel-otlp
# opentelemetry-exporter-zipkin requires protobuf<4.0, but otel-otlp requires protobuf>=5.0

# 安装所有可选索引后端
all-indexes = [
    "tantivy>=0.22.0",
    "whoosh>=2.7.4",
    "jieba>=0.42.0",
    "qdrant-client>=1.12.0",
]

[project.scripts]
regreader = "regreader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regreader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
