[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentex"
version = "0.1.0"
description = "Multi-Framework Agent Orchestration Library - Unified interface for Claude SDK, Pydantic AI, and LangGraph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "RegReader Team"}
]
keywords = [
    "agent",
    "ai",
    "claude",
    "pydantic-ai",
    "langgraph",
    "orchestration",
    "llm",
    "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "langgraph>=0.6.11",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.25.0,<1.0.0",  # Official Anthropic SDK
]
pydantic-ai = [
    "pydantic-ai>=1.0.0",
    "pydantic>=2.0",
]
langgraph = [
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.2.0,<1.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
]
all = [
    "anthropic>=0.25.0,<1.0.0",
    "pydantic-ai>=1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.2.0,<1.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agentex"
Repository = "https://github.com/your-org/agentex"
Issues = "https://github.com/your-org/agentex/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentex*"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
